recognition/generated/QuantumLanguageParser.py
# Generated from QuantumLanguageParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class QuantumLanguageParser ( Parser ):

    grammarFileName = "QuantumLanguageParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", 
                     "'**'", "'<'", "'>'", "'=='", "'>='", "'<='", "'<>'", 
                     "'!='", "'='", "'def'", "'return'", "'raise'", "'assert'", 
                     "'if'", "'elif'", "'else'", "'while'", "'for'", "'in'", 
                     "'try'", "'finally'", "'except'", "'or'", "'and'", 
                     "'not'", "'is'", "'None'", "'True'", "'False'", "'class'", 
                     "'pass'", "'continue'", "'break'", "'pi'", "'X'", "'H'", 
                     "'Z'", "'Y'", "'S'", "'SDG'", "'Toffoli'", "'TDG'", 
                     "'RX'", "'RY'", "'RZ'", "'CX'", "'P'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "'.'", "','", "':'", "';'", 
                     "<INVALID>", "'@'", "'(X)'", "'T'", "'''", "'t'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "SPACES", "COMMENTS", 
                      "ADD", "MINUS", "STAR", "DIV", "IDIV", "MOD", "POWER", 
                      "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", 
                      "NOT_EQ_1", "NOT_EQ_2", "ASSIGN", "DEF", "RETURN", 
                      "RAISE", "ASSERT", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "IN", "TRY", "FINALLY", "EXCEPT", "OR", "AND", 
                      "NOT", "IS", "NONE", "TRUE", "FALSE", "CLASS", "PASS", 
                      "CONTINUE", "BREAK", "PI", "X", "H", "Z", "Y", "S", 
                      "SDG", "T", "TDG", "RX", "RY", "RZ", "CX", "P", "OPEN_PAREN", 
                      "CLOSE_PAREN", "OPEN_BRACK", "CLOSE_BRACK", "OPEN_BRACE", 
                      "CLOSE_BRACE", "DOT", "COMMA", "COLON", "SEMI_COLON", 
                      "NEWLINE", "MATMUL", "KRONECKER", "HERMITIAN", "CONJUGATE", 
                      "TRANSPOSE", "IDENTIFIER", "QUBIT_IDENTIFIER", "QUBIT_TRANSPOSE_IDENTIFIER", 
                      "STRING_LITERAL", "INTEGER_LITERAL", "IMAGINARY_LITERAL", 
                      "FLOAT_LITERAL", "QUBIT_STATE_LITERAL", "QUBIT_TRANSPOSE_STATE_LITERAL" ]

    RULE_start = 0
    RULE_statement = 1
    RULE_sentence = 2
    RULE_if = 3
    RULE_elif = 4
    RULE_else = 5
    RULE_for = 6
    RULE_while = 7
    RULE_try = 8
    RULE_except = 9
    RULE_function_execution = 10
    RULE_function_declaration = 11
    RULE_assign = 12
    RULE_identifier = 13
    RULE_expression = 14
    RULE_binary_operator = 15
    RULE_prefix_unitary_operator = 16
    RULE_suffix_unitary_operator = 17
    RULE_single_qubit_gate = 18
    RULE_qubit_gate = 19
    RULE_constant = 20
    RULE_pass = 21

    ruleNames =  [ "start", "statement", "sentence", "if", "elif", "else", 
                   "for", "while", "try", "except", "function_execution", 
                   "function_declaration", "assign", "identifier", "expression", 
                   "binary_operator", "prefix_unitary_operator", "suffix_unitary_operator", 
                   "single_qubit_gate", "qubit_gate", "constant", "pass" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    SPACES=3
    COMMENTS=4
    ADD=5
    MINUS=6
    STAR=7
    DIV=8
    IDIV=9
    MOD=10
    POWER=11
    LESS_THAN=12
    GREATER_THAN=13
    EQUALS=14
    GT_EQ=15
    LT_EQ=16
    NOT_EQ_1=17
    NOT_EQ_2=18
    ASSIGN=19
    DEF=20
    RETURN=21
    RAISE=22
    ASSERT=23
    IF=24
    ELIF=25
    ELSE=26
    WHILE=27
    FOR=28
    IN=29
    TRY=30
    FINALLY=31
    EXCEPT=32
    OR=33
    AND=34
    NOT=35
    IS=36
    NONE=37
    TRUE=38
    FALSE=39
    CLASS=40
    PASS=41
    CONTINUE=42
    BREAK=43
    PI=44
    X=45
    H=46
    Z=47
    Y=48
    S=49
    SDG=50
    T=51
    TDG=52
    RX=53
    RY=54
    RZ=55
    CX=56
    P=57
    OPEN_PAREN=58
    CLOSE_PAREN=59
    OPEN_BRACK=60
    CLOSE_BRACK=61
    OPEN_BRACE=62
    CLOSE_BRACE=63
    DOT=64
    COMMA=65
    COLON=66
    SEMI_COLON=67
    NEWLINE=68
    MATMUL=69
    KRONECKER=70
    HERMITIAN=71
    CONJUGATE=72
    TRANSPOSE=73
    IDENTIFIER=74
    QUBIT_IDENTIFIER=75
    QUBIT_TRANSPOSE_IDENTIFIER=76
    STRING_LITERAL=77
    INTEGER_LITERAL=78
    IMAGINARY_LITERAL=79
    FLOAT_LITERAL=80
    QUBIT_STATE_LITERAL=81
    QUBIT_TRANSPOSE_STATE_LITERAL=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(QuantumLanguageParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = QuantumLanguageParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.statement()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 576446219628314720) != 0 or (((_la - 71)) & ~0x3f) == 0 and ((1 << (_la - 71)) & 2047) != 0):
                    break

            self.state = 49
            self.match(QuantumLanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.SentenceContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.SentenceContext,i)


        def NEWLINE(self):
            return self.getToken(QuantumLanguageParser.NEWLINE, 0)

        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(QuantumLanguageParser.SEMI_COLON)
            else:
                return self.getToken(QuantumLanguageParser.SEMI_COLON, i)

        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = QuantumLanguageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.sentence()
            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 52
                    self.match(QuantumLanguageParser.SEMI_COLON)
                    self.state = 53
                    self.sentence() 
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==67:
                self.state = 59
                self.match(QuantumLanguageParser.SEMI_COLON)


            self.state = 62
            self.match(QuantumLanguageParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_(self):
            return self.getTypedRuleContext(QuantumLanguageParser.IfContext,0)


        def for_(self):
            return self.getTypedRuleContext(QuantumLanguageParser.ForContext,0)


        def while_(self):
            return self.getTypedRuleContext(QuantumLanguageParser.WhileContext,0)


        def try_(self):
            return self.getTypedRuleContext(QuantumLanguageParser.TryContext,0)


        def function_execution(self):
            return self.getTypedRuleContext(QuantumLanguageParser.Function_executionContext,0)


        def assign(self):
            return self.getTypedRuleContext(QuantumLanguageParser.AssignContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(QuantumLanguageParser.Function_declarationContext,0)


        def pass_(self):
            return self.getTypedRuleContext(QuantumLanguageParser.PassContext,0)


        def expression(self):
            return self.getTypedRuleContext(QuantumLanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_sentence

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentence" ):
                return visitor.visitSentence(self)
            else:
                return visitor.visitChildren(self)




    def sentence(self):

        localctx = QuantumLanguageParser.SentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sentence)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.if_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.for_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.while_()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.try_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.function_execution()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.assign()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                self.function_declaration()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 71
                self.pass_()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 72
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(QuantumLanguageParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(QuantumLanguageParser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(QuantumLanguageParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(QuantumLanguageParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(QuantumLanguageParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(QuantumLanguageParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.StatementContext,i)


        def elif_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.ElifContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.ElifContext,i)


        def else_(self):
            return self.getTypedRuleContext(QuantumLanguageParser.ElseContext,0)


        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_if

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)




    def if_(self):

        localctx = QuantumLanguageParser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(QuantumLanguageParser.IF)
            self.state = 76
            self.expression(0)
            self.state = 77
            self.match(QuantumLanguageParser.COLON)
            self.state = 78
            self.match(QuantumLanguageParser.NEWLINE)
            self.state = 79
            self.match(QuantumLanguageParser.INDENT)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.statement()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 576446219628314720) != 0 or (((_la - 71)) & ~0x3f) == 0 and ((1 << (_la - 71)) & 2047) != 0):
                    break

            self.state = 85
            self.match(QuantumLanguageParser.DEDENT)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 86
                self.elif_()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 92
                self.else_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(QuantumLanguageParser.ELIF, 0)

        def expression(self):
            return self.getTypedRuleContext(QuantumLanguageParser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(QuantumLanguageParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(QuantumLanguageParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(QuantumLanguageParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(QuantumLanguageParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_elif

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElif" ):
                return visitor.visitElif(self)
            else:
                return visitor.visitChildren(self)




    def elif_(self):

        localctx = QuantumLanguageParser.ElifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_elif)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(QuantumLanguageParser.ELIF)
            self.state = 96
            self.expression(0)
            self.state = 97
            self.match(QuantumLanguageParser.COLON)
            self.state = 98
            self.match(QuantumLanguageParser.NEWLINE)
            self.state = 99
            self.match(QuantumLanguageParser.INDENT)
            self.state = 101 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 100
                self.statement()
                self.state = 103 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 576446219628314720) != 0 or (((_la - 71)) & ~0x3f) == 0 and ((1 << (_la - 71)) & 2047) != 0):
                    break

            self.state = 105
            self.match(QuantumLanguageParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(QuantumLanguageParser.ELSE, 0)

        def COLON(self):
            return self.getToken(QuantumLanguageParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(QuantumLanguageParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(QuantumLanguageParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(QuantumLanguageParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_else

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse" ):
                return visitor.visitElse(self)
            else:
                return visitor.visitChildren(self)




    def else_(self):

        localctx = QuantumLanguageParser.ElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_else)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(QuantumLanguageParser.ELSE)
            self.state = 108
            self.match(QuantumLanguageParser.COLON)
            self.state = 109
            self.match(QuantumLanguageParser.NEWLINE)
            self.state = 110
            self.match(QuantumLanguageParser.INDENT)
            self.state = 112 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 111
                self.statement()
                self.state = 114 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 576446219628314720) != 0 or (((_la - 71)) & ~0x3f) == 0 and ((1 << (_la - 71)) & 2047) != 0):
                    break

            self.state = 116
            self.match(QuantumLanguageParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(QuantumLanguageParser.FOR, 0)

        def identifier(self):
            return self.getTypedRuleContext(QuantumLanguageParser.IdentifierContext,0)


        def IN(self):
            return self.getToken(QuantumLanguageParser.IN, 0)

        def expression(self):
            return self.getTypedRuleContext(QuantumLanguageParser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(QuantumLanguageParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(QuantumLanguageParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(QuantumLanguageParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(QuantumLanguageParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_for

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)




    def for_(self):

        localctx = QuantumLanguageParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_for)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(QuantumLanguageParser.FOR)
            self.state = 119
            self.identifier()
            self.state = 120
            self.match(QuantumLanguageParser.IN)
            self.state = 121
            self.expression(0)
            self.state = 122
            self.match(QuantumLanguageParser.COLON)
            self.state = 123
            self.match(QuantumLanguageParser.NEWLINE)
            self.state = 124
            self.match(QuantumLanguageParser.INDENT)
            self.state = 126 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 125
                self.statement()
                self.state = 128 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 576446219628314720) != 0 or (((_la - 71)) & ~0x3f) == 0 and ((1 << (_la - 71)) & 2047) != 0):
                    break

            self.state = 130
            self.match(QuantumLanguageParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(QuantumLanguageParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(QuantumLanguageParser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(QuantumLanguageParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(QuantumLanguageParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(QuantumLanguageParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(QuantumLanguageParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_while

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = QuantumLanguageParser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_while)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(QuantumLanguageParser.WHILE)
            self.state = 133
            self.expression(0)
            self.state = 134
            self.match(QuantumLanguageParser.COLON)
            self.state = 135
            self.match(QuantumLanguageParser.NEWLINE)
            self.state = 136
            self.match(QuantumLanguageParser.INDENT)
            self.state = 138 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 137
                self.statement()
                self.state = 140 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 576446219628314720) != 0 or (((_la - 71)) & ~0x3f) == 0 and ((1 << (_la - 71)) & 2047) != 0):
                    break

            self.state = 142
            self.match(QuantumLanguageParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRY(self):
            return self.getToken(QuantumLanguageParser.TRY, 0)

        def COLON(self):
            return self.getToken(QuantumLanguageParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(QuantumLanguageParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(QuantumLanguageParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(QuantumLanguageParser.DEDENT, 0)

        def except_(self):
            return self.getTypedRuleContext(QuantumLanguageParser.ExceptContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_try

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTry" ):
                return visitor.visitTry(self)
            else:
                return visitor.visitChildren(self)




    def try_(self):

        localctx = QuantumLanguageParser.TryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_try)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(QuantumLanguageParser.TRY)
            self.state = 145
            self.match(QuantumLanguageParser.COLON)
            self.state = 146
            self.match(QuantumLanguageParser.NEWLINE)
            self.state = 147
            self.match(QuantumLanguageParser.INDENT)
            self.state = 149 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 148
                self.statement()
                self.state = 151 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 576446219628314720) != 0 or (((_la - 71)) & ~0x3f) == 0 and ((1 << (_la - 71)) & 2047) != 0):
                    break

            self.state = 153
            self.match(QuantumLanguageParser.DEDENT)
            self.state = 154
            self.except_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExceptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXCEPT(self):
            return self.getToken(QuantumLanguageParser.EXCEPT, 0)

        def expression(self):
            return self.getTypedRuleContext(QuantumLanguageParser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(QuantumLanguageParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(QuantumLanguageParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(QuantumLanguageParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(QuantumLanguageParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(QuantumLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return QuantumLanguageParser.RULE_except

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExcept" ):
                return visitor.visitExcept(self)
            else:
                return visitor.visitChildren(self)




    def except_(self):

        localctx = QuantumLanguageParser.ExceptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_except)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(QuantumLanguageParser.EXCEPT)
            self.state = 157
            self.expression(0)
            self.state = 158
            self.match(QuantumLanguageParser.COLON)
            self.state = 159
            self.match(QuantumLanguageParser.NEWLINE)
            self.state = 160
            self.match(QuantumLanguageParser.INDENT)
            self.state = 162 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 161
                self.statement()
                self.state = 164 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 576446219628314720) != 0 or (((_la - 71)) & ~0x3f) == 0 and ((1 << (_la - 71)) & 2047) != 0):
                    break

            self.state = 166
            self.match(QuantumLanguageParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_executionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(QuantumLanguageParser.IdentifierContext,0)


        def OPEN_PAREN(self):
            return self.getToken(QuantumLanguageParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(QuantumLanguageParser.CLOSE_PAREN, 0)
